--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 PORT=5000
 MONGO_URI=
 PAYMENT_PROVIDER=flare
+STELLAR_NETWORK=testnet
+STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
+STELLAR_DESTINATION_ADDRESS=
 SMTP_HOST=your_smtp_host
 SMTP_PORT=587
 SMTP_SECURE=true
