--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ PAYMENT_PROVIDER=flare
 STELLAR_NETWORK=testnet
 STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
 STELLAR_DESTINATION_ADDRESS=
+PAYMENT_RECONCILIATION_INTERVAL_MS=60000
+PAYMENT_RECONCILIATION_BATCH_SIZE=50
+PAYMENT_RECONCILIATION_STALE_MS=30000
 SMTP_HOST=your_smtp_host
 SMTP_PORT=587
 SMTP_SECURE=true
